# memes

./: .gitignore  Makefile  README.md  TZ.md  dev.env
diagrams/: c4.puml
docker-compose/: app.yaml  storages.yaml
memes/gateway/: Dockerfile  Makefile  pyproject.toml  requirements.txt
memes/gateway/src/: docker-entrypoint.sh
memes/gateway/src/container/: __init__.py  infra.py
memes/gateway/src/core/: settings.py
memes/gateway/src/domain/: errors.py
memes/gateway/src/domain/protocols/: c3.py  errors.py
memes/gateway/src/infra/: minio_client.py
memes/gateway/src/infra/services/c3/: minio_c3.py
memes/gateway/src/presentation/api/error_handlers/: __init__.py
memes/gateway/src/presentation/api/middlewares/: register.py
memes/gateway/src/presentation/api/routes/: register.py
memes/gateway/src/presentation/api/routes/c3/: register.py  routes.py
memes/gateway/src/presentation/api/routes/common/: healthcheck.py
memes/public/: Makefile  pyproject.toml  requirements.txt
memes/public/src/container/: __init__.py  infra.py  logic.py
memes/public/src/core/: __init__.py  log.py  settings.py
memes/public/src/domain/: constants.py
memes/public/src/domain/entities/: base.py  memes.py
memes/public/src/domain/protocols/: c3_gateway.py  errors.py  meme_repository.py  memes_interactor.py
memes/public/src/domain/values/: base.py  errors.py  meme_image_url.py  meme_text.py
memes/public/src/infra/db/: models.py  uow.py
memes/public/src/infra/mappers/meme/: orm_mapper.py
memes/public/src/infra/repositories/memes/: in_memory.py  sqla.py
memes/public/src/infra/services/c3/: errors.py  http_service.py  mock.py
memes/public/src/logic/interactors/: errors.py  memes.py
memes/public/src/logic/usecases/: interface.py
memes/public/src/logic/usecases/memes/: __init__.py  add.py  delete.py  fetch_by_id.py  fetch_list.py  update.py
memes/public/src/migrations/: env.py
memes/public/src/migrations/versions/: e31613cd8b10_init.py
memes/public/src/presentation/api/: main.py
memes/public/src/presentation/api/routes/: register.py
memes/public/src/presentation/api/routes/memes/: mapper.py  register.py  routes.py  schemas.py
memes/public/tests/: conftest.py  test_container.py
memes/public/tests/dependencies/: mock_interactor.py
memes/public/tests/domain/: test_meme_text.py
memes/public/tests/presentation/: test_add.py  test_delete.py  test_fetch.py  test_update.py
tests/: Dockerfile  docker-compose.yaml  requirements.txt
