[tool.poetry]
name = "gateway"
version = "0.1.0"
description = "S3 Gateway"
authors = ["likeinlife <likeinlife@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
minio = "^7.2.7"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
dishka = "^1.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
