[tool.poetry]
name = "gateway"
version = "0.1.0"
description = "S3 Gateway"
authors = ["likeinlife <likeinlife@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
minio = "^7.2.7"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
dishka = "^1.2.0"
structlog = "^24.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["migrations"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Allow boolean type in func arguments
    "FBT001",
    # Allow PEP585 annotations like dict[str, str] 
    "FA102",
    # No blankline before class
    "D203",
    # Multiline string summary should start at the first line
    "D213",
    # Allow no-typehints
    "ANN101",
    "ANN102",
    # Disable doc-string rules
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D407",
    "D406",
    # Allow type: ignore
    "PGH003",
    # Useless
    "FBT",
    "B904",
]
exclude = []

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "faststream.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["D", "S", "ANN", "PLR"]

[tool.ruff.lint.isort]
known-first-party = [
    "presentation",
    "core",
    "domain",
    "infra",
    "logic",
    "container",
]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "normal"
